language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_global_requires_acquire.move
module 0x8675309::A {
    struct T1 has key { b: bool }

    public fun test(addr: address) {
        borrow_global<T1>(addr);
    }

}

// check: MISSING_ACQUIRES_RESOURCE_ANNOTATION_ERROR
